--- a/composer.json
+++ b/composer.json
@@ -3,18 +3,18 @@
     "description": "A CLI tool to format and search TYPO3 Logfiles",
     "type": "typo3-cms-extension",
     "require": {
-        "symfony/finder": "^5.3"
+        "php": "7.2.*||7.3.*||7.4.*||8.0.*||8.1.*"
     },
     "require-dev": {
-        "typo3/cms-core": "^11.5",
-        "typo3/cms-backend": "^11.5",
-        "typo3/cms-frontend": "^11.5",
-        "typo3/cms-tstemplate": "^11.5",
-        "typo3/cms-install": "^11.5",
+        "typo3/cms-core": "^9.5",
+        "typo3/cms-backend": "^9.5",
+        "typo3/cms-frontend": "^9.5",
+        "typo3/cms-tstemplate": "^9.5",
+        "typo3/cms-install": "^9.5",
         "friendsoftypo3/phpstan-typo3": "^0.8.1",
         "vimeo/psalm": "^4.10",
-        "typo3/cms-lowlevel": "^11.5",
-        "helhum/typo3-console": "^7.0"
+        "typo3/cms-lowlevel": "^9.5",
+        "helhum/typo3-console": "^5"
     },
     "license": "MIT",
     "autoload": {
@@ -38,11 +38,11 @@
     "scripts": {
         "pre-autoload-dump": [
             "mkdir -p .Build/public/typo3conf/ext/",
-            "[ -L .Build/public/typo3conf/ext/logformatter ] && rm .Build/public/typo3conf/ext/logformatter"
+            "[ -L .Build/public/typo3conf/ext/logformatter ] && rm .Build/public/typo3conf/ext/logformatter; exit 0"
         ],
         "post-autoload-dump": [
             "mkdir -p .Build/public/typo3conf/ext/",
-            "[ -L .Build/public/typo3conf/ext/logformatter ] || ln -snvf ../../../../. .Build/public/typo3conf/ext/logformatter"
+            "[ -L .Build/public/typo3conf/ext/logformatter ] || ln -snvf ../../../../. .Build/public/typo3conf/ext/logformatter; exit 0"
         ]
     }
 }
