--- a/composer.json
+++ b/composer.json
@@ -2,6 +2,11 @@
     "name": "sudhaus7/logformatter",
     "description": "A CLI tool to format and search TYPO3 Logfiles",
     "type": "typo3-cms-extension",
+    "config": {
+        "platform": {
+            "php": "7.4.20"
+        }
+    },
     "require": {
         "php": "7.2.*||7.3.*||7.4.*||8.0.*||8.1.*",
         "typo3/cms-core": "9.5.*||10.4.*||11.5.*"
