--- a/composer.json
+++ b/composer.json
@@ -5,6 +5,10 @@
     "config": {
         "platform": {
             "php": "7.4.20"
+        },
+        "allow-plugins": {
+            "typo3/cms-composer-installers": true,
+            "typo3/class-alias-loader": true
         }
     },
     "require": {
