[TASK] update .github actions
Tasks:
* change from publish based on tags to publish based on release

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -1,8 +1,7 @@
 name: Publish
 on:
-  push:
-    tags:
-      - '*'
+  release:
+    types: [published]
 
 
 jobs:
@@ -15,4 +14,3 @@ jobs:
       - uses: tomasnorre/typo3-upload-ter@v2
         with:
           api-token: ${{ secrets.TYPO3_API_TOKEN }}
-
