--- a/composer.json
+++ b/composer.json
@@ -4,7 +4,7 @@
     "type": "typo3-cms-extension",
     "config": {
         "platform": {
-            "php": "8.2.0"
+            "php": "8.3.0"
         },
         "allow-plugins": {
             "typo3/cms-composer-installers": true,
@@ -12,8 +12,8 @@
         }
     },
     "require": {
-        "php": "7.2.*||7.3.*||7.4.*||8.0.*||8.1.*||8.2.*",
-        "typo3/cms-core": "9.5.*||10.4.*||11.5.*||^12.0"
+        "php": "7.2.*||7.3.*||7.4.*||8.0.*||8.1.*||8.2.*||8.3.*",
+        "typo3/cms-core": "9.5.*||10.4.*||11.5.*||^12.4"
     },
     "require-dev": {
         "typo3/cms-backend": "^12.0",
@@ -24,7 +24,8 @@
         "vimeo/psalm": "^4.10",
         "typo3/cms-lowlevel": "^12.0",
         "helhum/typo3-console": "*",
-        "typo3/coding-standards": "^0.5.5"
+        "typo3/coding-standards": "^0.5.5",
+        "ssch/typo3-rector": "^2.6"
     },
     "license": "MIT",
     "autoload": {
